# ansible-virtualization-guest

./: .ansible-lint  .gitignore  .travis.yml  .yamllint  README.md  configure  galaxy.yml  pyproject.toml  requirements-collections.yml  requirements-dev.txt  requirements-monorepo.yml  requirements-standalone.yml  requirements.txt  requirements.yml  tox.ini
.cache/roles/robertdebock.bootstrap/meta/: .galaxy_install_info
.cache/roles/robertdebock.users/meta/: .galaxy_install_info
.cache/roles/tcharl.ansible_manage_lvm/: requirements-dev.txt
.cache/roles/tcharl.ansible_routing/: .travis.yml  README.md  requirements-collections.yml  requirements.yml
.cache/roles/tcharl.ansible_users/: README.md  requirements-collections.yml  requirements.yml
.cache/roles/tcharl.ansible_virtualization/: .travis.yml  README.md  requirements.yml
.github/workflows/: molecule.yml
defaults/: main.yml
handlers/: main.yml
meta/: main.yml
molecule/default/: ansible.cfg  converge.yml  molecule.yml
molecule/default/tests/: test_default.py
molecule/kvm/: ansible.cfg  converge.yml  molecule.yml  prepare.yml
molecule/recreate/: converge.yml  molecule.yml
molecule/twovms/: converge.yml  molecule.yml
molecule/twovms/tests/: test_default.py
tasks/: ansible-hosts.yml  ansible-user-directories.yml  delete-vm-network-host.yml  delete-vm.yml  directories-and-users.yml  guest-ssh.yml  host-ip-forwarding.yml  host-port-forward.yml  main.yml  network-bridge.yml  network-nat.yml  network.yml  networkmanager-bridge.yml  packages.yml  persistent-facts-directories.yml  persistent-facts.yml  post-create.yml  prepare-vm-setup.yml  prereq.yml  unarchive-box.yml  vm.yml
templates/: 1systemd-resolved-vm.j2  configured_vm_facts.j2  qemu-hook.j2  sysctl_d_50_default.conf.j2
tests/: test.yml
(+58 files in other folders)
