[tool.poetry]
name = "tcharl.ansible_virtualization_guest"
version = "2.0.1"
description = "Download and start a qemu image on any kvm kypervisor"
authors = ["Charlie Mordant <cmordant1@gmail.com>"]
license = "Apache2"
readme = "README.md"
include = ["defaults", "files", "handlers", "meta", "tasks", "templates", "vars"]
packages = [
    {include = "meta/**/*.py"}
]

[tool.poetry.dependencies]
python = ">=3.11"
ansible = "^11.5.0"
jmespath = "^1.0.1"
netaddr = "^0.8.0"

[tool.poetry.group.dev.dependencies]
flake8 = "*"
yamllint = "*"
tox = "*"
pytest-testinfra = "*"
python-vagrant = "*"
molecule = "25.1.0"
molecule-plugins = { version = "*", extras = ["vagrant"] }
ansible-lint = { version = "v25.4.0", markers = "platform_system != 'Windows'" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"
